gccida/c0/initialize_for_inline
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_for_inline/src/integrate.c:794:22: error: expected expression
preal = qToBigEndian<unsigned int>( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)p->fld[0].rtwint), p); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_for_inline/src/integrate.c:794:9: error: use of undeclared identifier 'qToBigEndian'
preal = qToBigEndian<unsigned int>( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)p->fld[0].rtwint), p); 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_for_inline/src/integrate.c:795:25: error: use of undeclared identifier 'machine_mode'
pimag = gen_imagpart( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)preal), p); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_for_inline/src/integrate.c:795:40: error: expected expression
pimag = gen_imagpart( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)preal), p); 
                                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_for_inline/src/obj/integrate.o] Error 1
